removed call for speakers and brainfactory buttons

--- a/footer.html
+++ b/footer.html
@@ -45,7 +45,7 @@
       <li class="flex-item" style="width: 160px;"><a><img src="images/collabs/nu-law.png"></a></li>
       <li class="flex-item" style="width: 200px;"><a><img src="images/collabs/LITE-Lab.jpg"></a></li>
       <li class="flex-item" style="width: 180px;"><a><img src="images/collabs/universidad-uch.png"></a></li>
-      <li class="flex-item" style="width: 200px;"><a><img src="images/collabs/Escuela-de-Practica-Juridica.png"></a></li>
+      <li class="flex-item" style="width: 200px;"><a><img src="images/collabs/Escuela-de-Practica-Juridica-black.jpg"></a></li>
       <li class="flex-item" style="width: 150px;"><a><img src="images/collabs/thinklegaltech.png"></a></li>
       <li class="flex-item" style="width: 120px;"><a><img src="images/collabs/stanford.png"></a></li>
       <li class="flex-item" style="width: 160px;"><a><img src="images/collabs/LOGO-EUI-full.png"></a></li>
@@ -59,6 +59,7 @@
       <li class="flex-item" style="width: 140px;"><img src="images/collabs/logo-eLegal.png"></a></li>
       <li class="flex-item" style="width: 240px;"><img src="images/collabs/Laurea.png"></a></li>
       <li class="flex-item" style="width: 140px;"><img src="images/collabs/UEF.jpg"></a></li>
+      <li class="flex-item" style="width: 140px;"><img src="images/collabs/Erasmus_program.PNG"></a></li>
       </ul>
     </div>
     <!-- Content Main Section Ends -->
