--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		align-items: center;
         line-height: 100px;
         text-align: center;
-        justify-content:center;
+        justify-content: center;
       }
 	  .flex-item:hover img {
         transform: scale(1.2);
@@ -253,6 +253,10 @@
 				<h3 >Announcements</h3>
 				<ul style="padding-top: 50px; text-align: left;">
 					<li style="padding-bottom: 10px;">
+						<h4>12 June 2023</h4>
+						<p style="font-size: 20px;">Call for participants and mentors for BRAINFACTORY is now closed, thank you all wonderful people for applying! <a href="brainfactory.html" style="color: #50cec1; text-decoration: underline;">See more</a></p>
+					</li>
+					<li style="padding-bottom: 10px;">
 						<h4>17 May 2023</h4>
 						<p style="font-size: 20px;">Call for participants and mentors for BRAINFACTORY is now open! <a href="brainfactory.html" style="color: #50cec1; text-decoration: underline;">See more</a></p>
 					</li>
@@ -312,7 +316,7 @@
 			<li class="flex-item" style="width: 250px"><a href="https://www.almatalent.fi/" target="_blank"><img src="images/collabs/AlmaTalent_black_rgb.png"></a></li>
 			<li class="flex-item" style="width: 190px"><a href="https://www.linkedin.com/company/pickering-pearce/about/" target="_blank"><img src="images/collabs/pickering_pearce_logo.png"></a></li>
 			<li class="flex-item" style="width: 190px"><a href="https://treehouseinnovation.com/" target="_blank"><img src="images/collabs/Treehouse-Jul2016.png"></a></li>
-			<li class="flex-item" style="width: 190px"><a href="https://www.dottirlaw.com/" target="_blank"><img src="images/collabs/Dottir-logo-musta.jpg"></a></li>
+			<li class="flex-item" style="width: 190px;"><a href="https://www.dottirlaw.com/" target="_blank"><img src="images/collabs/Dottir-logo-musta.jpg"></a></li>
 			<li class="flex-item" style="width: 250px"><a href="https://www.tietoevry.com/fi/" target="_blank"><img src="images/collabs/Tietoevry.png"></a></li>
 			<li class="flex-item" style="width: 170px"><a href="https://shop.edita.fi/" target="_blank"><img src="images/collabs/Edita.png"></a></li>
 			<li class="flex-item" style="width: 200px"><a href="https://www.dlapiper.com/en-us" target="_blank"><img src="images/collabs/DLA_Piper.jpg"></a></li>
@@ -395,7 +399,7 @@
 	<li class="flex-item" style="width: 250px;"><a href="https://www.nulawlab.org/" target="_blank"><img src="images/collabs/nu-law.png"></a></li>
 	<li class="flex-item" style="width: 250px;"><a href="https://litelab.law.hku.hk/" target="_blank"><img src="images/collabs/LITE-Lab.jpg"></a></li>
 	<li class="flex-item" style="width: 250px;"><a href="https://www.uchceu.com/en/" target="_blank"><img src="images/collabs/universidad-uch.png"></a></li>
-	<li class="flex-item" style="width: 250px;"><a href="https://www.epj.es/" target="_blank"><img src="images/collabs/Escuela-de-Practica-Juridica.png"></a></li>
+	<li class="flex-item" style="width: 250px;"><a href="https://www.epj.es/" target="_blank"><img src="images/collabs/Escuela-de-Practica-Juridica-black.jpg"></a></li>
 	<li class="flex-item" style="width: 250px;"><a href="https://www.linkedin.com/company/think-legaltech/?viewAsMember=true" target="_blank"><img src="images/collabs/thinklegaltech.png"></a></li>
 	<li class="flex-item"><a href="https://www.legaltechdesign.com/" target="_blank"><img src="images/collabs/stanford.png"></a></li>
 	<li class="flex-item"><a href="https://www.eui.eu/en/home/" target="_blank"><img src="images/collabs/LOGO-EUI-full.png"></a></li>
@@ -409,6 +413,7 @@
 	<li class="flex-item"><a href="https://www.elegal.technology/" target="_blank"><img src="images/collabs/logo-eLegal.png"></a></li>
 	<li class="flex-item" style="width: 370px;"><a href="https://www.laurea.fi/en/" target="_blank"><img src="images/collabs/Laurea.png"></a></li>
 	<li class="flex-item" style="width: 240px;"><a href="https://www.uef.fi/en" target="_blank"><img src="images/collabs/UEF.jpg"></a></li>
+	<li class="flex-item" style="width: 260px;"><a href="https://www.uchceu.com/en/advanced-learning-facilities/legal-tech" target="_blank"><img src="images/collabs/Erasmus_program.PNG"></a></li>
   </ul>
 
 </div>
