--- a/speakers.html
+++ b/speakers.html
@@ -107,7 +107,7 @@
 
         <div class="justify-center">
     
-          <h2>Meet the confirmed speakers</h2>
+          <h2>Meet the Speakers!</h2>
           <div class="speaker">
             <div class="read-more-container">
           <div class="flex-container">
@@ -123,7 +123,7 @@
                 <div class="justify-center">
                   <h3 style="font-size: 25px;">Callum Brown</h3>
                   <div class="image"><a><img src="images/speakers/2023/callum-brown.jpg"></a></div>
-                  <p>Senior Legal Designer, Simmons & Simmons<span class="read-more-text">. Callum is a Senior Legal Designer at Simmons & Simmons. He has been working in legal tech and legal design for the past 4 years with the international law firm Simmons and Simmons. He has guest lectured at Oxford, Science Po, IE Madrid and Swansea. He was an English teacher for 10 years, and was a professional fire juggler.</span></p>
+                  <p>Senior Legal Designer, Simmons & Simmons<span class="read-more-text">. Callum Brown is a Senior Legal Designer at Simmons & Simmons. He has been working in legal tech and legal design for the past 4 years with the international law firm Simmons and Simmons. He has guest lectured at Oxford, Science Po, IE Madrid and Swansea. He was an English teacher for 10 years, and was a professional fire juggler.</span></p>
                   <span class="read-more-btn">Read More...</span>
                 </div>
               </div>
@@ -131,7 +131,7 @@
                 <div class="justify-center">
                   <h3 style="font-size: 25px;">Glen Byrne</h3>
                   <div class="image"><a><img src="images/speakers/2023/glen-byrne.jpg"></a></div>
-                  <p>Legal Designer, Simmons & Simmons<span class="read-more-text">. Glen qualified as a lawyer in Ireland before joining Simmons Wavelength as a legal designer. Drawing on experiences working in design and communications, Glen creates a better experience of law for its users. As part of training as a solicitor, Glen worked in employment law, European competition law, debt and enforcement, and eventually qualifying into international tax law. Glen also worked in communications and in graphic design, which has given him a perspective unique in the legal industry and skills that are pertinent to successful legal design. Glen has worked on large legal design projects as part of Simmons & Simmons, such as recreating the data privacy manual for a large, multinational energy business, and redesigning the code of conduct for a global financial institution. Glen has also taught legal design principles at Oxford University and Swansea University. </span></p>
+                  <p>Legal Designer, Simmons & Simmons<span class="read-more-text">. Glen Byrne qualified as a lawyer in Ireland before joining Simmons Wavelength as a legal designer. Drawing on experiences working in design and communications, Glen creates a better experience of law for its users. As part of training as a solicitor, Glen worked in employment law, European competition law, debt and enforcement, and eventually qualifying into international tax law. Glen also worked in communications and in graphic design, which has given him a perspective unique in the legal industry and skills that are pertinent to successful legal design. Glen has worked on large legal design projects as part of Simmons & Simmons, such as recreating the data privacy manual for a large, multinational energy business, and redesigning the code of conduct for a global financial institution. Glen has also taught legal design principles at Oxford University and Swansea University. </span></p>
                   <span class="read-more-btn">Read More...</span>
                 </div>
               </div>
@@ -196,7 +196,7 @@
                     <h3 style="font-size: 25px;">Erika Pagano</h3>
                   </div>
                   <div class="image"><a><img src="images/speakers/2023/erika-pagano.jpg"></a></div>
-                  <p>Head of Legal Innovation and Design, Simmons & Simmons<span class="read-more-text">. Erika is an award-winning lawyer, innovator, and educator whose sweet spots include culture creation, leadership, strategy, teaming, technology, and cross-border initiatives. Having dedicated a decade to change, creativity, and client centricity in the legal profession, Erika works with a wide variety of clients on harnessing the power of legal design. Erika was recognized by LawTechUK, a Ministry of Justice-backed initiative, as a legal tech trailblazer. She was named Rising Star of the Year (the Lynne Freeman Award) by WeAreTheCity in 2021, as well as “highly commended” for Rising Star of the Year at the 2019 British Legal Awards. <br><br>She is a regular speaker and published author. She also serves as Guest Faculty at IE University (Madrid), where she teaches undergraduate and masters courses on innovation in the legal profession. She sits on multiple boards (Georgetown Class of 2008 Committee, LawWithoutWalls Advisory Board, University of Miami School of Law Alumni Board and National Advisory Council, and others) and is a member of Simmons’ gender balance and neurodiversity committees.</span></p>
+                  <p>Head of Legal Innovation and Design, Simmons & Simmons<span class="read-more-text">. Erika Pagano is an award-winning lawyer, innovator, and educator whose sweet spots include culture creation, leadership, strategy, teaming, technology, and cross-border initiatives. Having dedicated a decade to change, creativity, and client centricity in the legal profession, Erika works with a wide variety of clients on harnessing the power of legal design. Erika was recognized by LawTechUK, a Ministry of Justice-backed initiative, as a legal tech trailblazer. She was named Rising Star of the Year (the Lynne Freeman Award) by WeAreTheCity in 2021, as well as “highly commended” for Rising Star of the Year at the 2019 British Legal Awards. <br><br>She is a regular speaker and published author. She also serves as Guest Faculty at IE University (Madrid), where she teaches undergraduate and masters courses on innovation in the legal profession. She sits on multiple boards (Georgetown Class of 2008 Committee, LawWithoutWalls Advisory Board, University of Miami School of Law Alumni Board and National Advisory Council, and others) and is a member of Simmons’ gender balance and neurodiversity committees.</span></p>
                   <span class="read-more-btn">Read More...</span>
                 </div>
                 <div class="flex-item">
@@ -232,23 +232,9 @@
 
   
 
-  <div class="wrapper why-attend">
-      <div class="container">
-	<div id="content-why-attend" class="justify-center">
 
-	  <h2>Speakers and Program for <br/> 2023 is in the works!</h2>
-
-	  <p style="font-size: 20px;">We are working really hard to create the best Legal Design Program out there - stay tuned to see how it evolves!
-	    <br/><br/>
-	    If you know anyone who has a cool take on Legal Design, a doer, speaker or a great inspiration - <br/> get in touch with us today to discuss further:  </p>
-	</div>
-      </div>
-  </div>
 
     <div class="actions">
-			<div class="extra-button">
-				<div class="col-sm-12 justify-center-xs justify-center padding-top-xs-00" style="margin-bottom: 10px;"><a href="https://forms.gle/DFXyqfFzFNtKD3n39" class="btn light">Call for Speakers Open Now!</a></div>
-		</div>
 
     <!-- Wrapper // Header Section Ends -->
 
