--- a/brainfactory.html
+++ b/brainfactory.html
@@ -140,11 +140,97 @@
             Our BrainFactory team together with our Partners create the challenging BrainFactory problems that arise from real life examples from the cross-sections of law and design thinking.<br><br>
             BrainFactory will take place 11-13 September 2023.
           </p>
-          <h4 style="margin: 40px 0 0 0;">Preliminary Program for BrainFactory 2023</h4>
-          <p>Monday 11 September 15:00 - 20:00<br><br>
-            Tuesday 12 September 09:00 - 20:00<br><br>
-            Wednesday 13 September 09:00 - 16:00<br><br>
-            <span class="italics">As a participant or mentor you need to participate in the BrainFactory full-time on 11-13 September.</span><br><br></p>
+          
+          <h3 style="margin: 40px 0 0 0;">Monday 11 September*</h3>
+
+          <table style="margin-left: 200px; margin-right: 90px; margin-bottom: 0px;"><colgroup><col style="width: 20%;"><col style="width: 80%"></colgroup>
+            <tbody style="text-align: left; padding-left: 20px;">
+              <tr>
+                <td><p>15.00</p></td>
+                <td><p>Introduction and Kick-Of</p></td>
+              </tr>
+
+              <tr>
+                <td><p>15.45</p></td>
+                <td><p>Introduction to Legal Design, BrainFactory Talk 1</p></td>
+              </tr>
+
+              <tr>
+                <td><p>16.30</p></td>
+                <td><p>Teams gather with mentors and partners</p></td>
+              </tr>
+
+              <tr>
+                <td><p>19.00</p></td>
+                <td><p>End day 1</p></td>
+              </tr>
+            </tbody>
+          </table>
+
+          <h3 style="margin: 40px 0 0 0;">Tuesday 12 September*</h3>
+
+          <table style="margin-left: 200px; margin-right: 90px; margin-bottom: 0px;"><colgroup><col style="width: 20%;"><col style="width: 80%"></colgroup>
+            <tbody style="text-align: left; padding-left: 20px;">
+              <tr>
+                <td><p>09.00</p></td>
+                <td><p>Teams meet with mentors and continue working </p></td>
+              </tr>
+
+              <tr>
+                <td><p>12.00</p></td>
+                <td><p>BrainFactory Lunch</p></td>
+              </tr>
+
+              <tr>
+                <td><p>13.30</p></td>
+                <td><p>BrainFactory Talk 2</p></td>
+              </tr>
+
+              <tr>
+                <td><p>14.00</p></td>
+                <td><p>BrainFactory Talk 3</p></td>
+              </tr>
+
+              <tr>
+                <td><p>14.45</p></td>
+                <td><p>Teams+mentors continue working/p></td>
+              </tr>
+
+              <tr>
+                <td><p>19.00/20.00</p></td>
+                <td><p>Joint dinner out for BrainFactory participants and mentors</p></td>
+              </tr>
+
+            </tbody>
+          </table>
+
+          <h3 style="margin: 40px 0 0 0;">Wednesday 13 September*</h3>
+
+          <table style="margin-left: 200px; margin-right: 90px; margin-bottom: 0px;"><colgroup><col style="width: 20%;"><col style="width: 80%"></colgroup>
+            <tbody style="text-align: left; padding-left: 20px;">
+              <tr>
+                <td><p>09.00</p></td>
+                <td><p>Teams and mentors continue working </p></td>
+              </tr>
+
+              <tr>
+                <td><p>13.15</p></td>
+                <td><p>Teams finalize presentations</p></td>
+              </tr>
+
+              <tr>
+                <td><p>15.00</p></td>
+                <td><p>Presentations start (partners present)</p></td>
+              </tr>
+
+              <tr>
+                <td><p>15.45</p></td>
+                <td><p>Thank you and see you at the Summit tomorrow /p></td>
+              </tr>
+            </tbody>
+          </table>
+
+          <p>*specifics of the timetable are still subject to change if we need to make adjustments</p>
         </div>
         <div class="row justify-content-md-center justify-center">
           <div class="col-lg-6 col-xs-12" style="padding-top: 100px;">
