added designs for progarm and bf program

--- a/brainfactory.html
+++ b/brainfactory.html
@@ -80,6 +80,48 @@
         transform: translateY(-50%);
       }
 
+      .bf_program h4{
+        margin-top: 30px;
+        margin-bottom: 5px;
+        font-size: 22px;
+      }
+
+      .bf_program{
+        margin-left: 10%;
+        margin-right: 10%;
+        text-align: left;
+        padding-bottom: 50px;
+      }
+
+      .blue{
+        color: #c30979;
+      }
+
+      .bf_program h3{
+        margin-top: 40px;
+        margin-bottom: 00px;
+        text-align: center;
+      }
+
+      .bf_program p{
+        line-height: 1.4;
+        margin-bottom: 0px;
+      }
+
+      .bulp p{
+        background-color: #fff;
+        text-align: center;
+        margin-right: 15px;
+        border-radius: 5px;
+      }
+
+      .bf_program table{
+        color: black;
+        font-weight: bold;
+        padding-bottom: 20px;
+      }
+
+
     </style>
 
 
@@ -140,97 +182,101 @@
             Our BrainFactory team together with our Partners create the challenging BrainFactory problems that arise from real life examples from the cross-sections of law and design thinking.<br><br>
             BrainFactory will take place 11-13 September 2023.
           </p>
+          <div class="bf_program">
           
-          <h3 style="margin: 40px 0 0 0;">Monday 11 September*</h3>
+          <h3>Program*</h3>
+          <h4>DAY 1  <span class="blue">|</span> Monday <span class="blue">|</span> 11 september 2023</h4>
 
-          <table style="margin-left: 200px; margin-right: 90px; margin-bottom: 0px;"><colgroup><col style="width: 20%;"><col style="width: 80%"></colgroup>
-            <tbody style="text-align: left; padding-left: 20px;">
+
+          <table><colgroup><col style="width: 20%;"><col style="width: 80%"></colgroup>
+            <tbody>
               <tr>
-                <td><p>15.00</p></td>
+                <td class="bulp"><p>15:00</p></td>
                 <td><p>Introduction and Kick-Of</p></td>
               </tr>
 
               <tr>
-                <td><p>15.45</p></td>
+                <td class="bulp"><p>15:45</p></td>
                 <td><p>Introduction to Legal Design, BrainFactory Talk 1</p></td>
               </tr>
 
               <tr>
-                <td><p>16.30</p></td>
+                <td class="bulp"><p>16:30</p></td>
                 <td><p>Teams gather with mentors and partners</p></td>
               </tr>
 
               <tr>
-                <td><p>19.00</p></td>
+                <td class="bulp"><p>19:00</p></td>
                 <td><p>End day 1</p></td>
               </tr>
             </tbody>
           </table>
 
-          <h3 style="margin: 40px 0 0 0;">Tuesday 12 September*</h3>
+          <h4>DAY 2  <span class="blue">|</span> Tuesday <span class="blue">|</span> 12 september 2023</h4>
 
-          <table style="margin-left: 200px; margin-right: 90px; margin-bottom: 0px;"><colgroup><col style="width: 20%;"><col style="width: 80%"></colgroup>
-            <tbody style="text-align: left; padding-left: 20px;">
+          <table><colgroup><col style="width: 20%;"><col style="width: 80%"></colgroup>
+            <tbody>
               <tr>
-                <td><p>09.00</p></td>
+                <td class="bulp"><p>09:00</p></td>
                 <td><p>Teams meet with mentors and continue working </p></td>
               </tr>
 
               <tr>
-                <td><p>12.00</p></td>
+                <td class="bulp"><p>12:00</p></td>
                 <td><p>BrainFactory Lunch</p></td>
               </tr>
 
               <tr>
-                <td><p>13.30</p></td>
+                <td class="bulp"><p>13:30</p></td>
                 <td><p>BrainFactory Talk 2</p></td>
               </tr>
 
               <tr>
-                <td><p>14.00</p></td>
+                <td class="bulp"><p>14:00</p></td>
                 <td><p>BrainFactory Talk 3</p></td>
               </tr>
 
               <tr>
-                <td><p>14.45</p></td>
+                <td class="bulp"><p>14:45</p></td>
                 <td><p>Teams+mentors continue working/p></td>
               </tr>
 
               <tr>
-                <td><p>19.00/20.00</p></td>
+                <td class="bulp"><p>19:00-20:00</p></td>
                 <td><p>Joint dinner out for BrainFactory participants and mentors</p></td>
               </tr>
 
             </tbody>
           </table>
 
-          <h3 style="margin: 40px 0 0 0;">Wednesday 13 September*</h3>
+          <h4>DAY 3  <span class="blue">|</span> Wednesday <span class="blue">|</span> 13 september 2023</h4>
 
-          <table style="margin-left: 200px; margin-right: 90px; margin-bottom: 0px;"><colgroup><col style="width: 20%;"><col style="width: 80%"></colgroup>
-            <tbody style="text-align: left; padding-left: 20px;">
+          <table><colgroup><col style="width: 20%;"><col style="width: 80%"></colgroup>
+            <tbody>
               <tr>
-                <td><p>09.00</p></td>
+                <td class="bulp"><p>09:00</p></td>
                 <td><p>Teams and mentors continue working </p></td>
               </tr>
 
               <tr>
-                <td><p>13.15</p></td>
+                <td class="bulp"><p>13:15</p></td>
                 <td><p>Teams finalize presentations</p></td>
               </tr>
 
               <tr>
-                <td><p>15.00</p></td>
+                <td class="bulp"><p>15:00</p></td>
                 <td><p>Presentations start (partners present)</p></td>
               </tr>
 
               <tr>
-                <td><p>15.45</p></td>
+                <td class="bulp"><p>15:45</p></td>
                 <td><p>Thank you and see you at the Summit tomorrow /p></td>
               </tr>
             </tbody>
           </table>
 
           <p>*specifics of the timetable are still subject to change if we need to make adjustments</p>
+        </div>
         </div>
         <div class="row justify-content-md-center justify-center">
           <div class="col-lg-6 col-xs-12" style="padding-top: 100px;">
@@ -263,7 +309,7 @@
           </div>
         </div>
           
-          </p>
+        </div>
         </div>
       </div>
     </div>
