--- a/program.html
+++ b/program.html
@@ -33,6 +33,80 @@
       });
     </script>
 
+    <style>
+      .program_list{
+        margin: auto 5%;
+      }
+
+      .blue{
+        color: #50cec1;
+      }
+
+      .program_list h1{
+        font-size: 26px;
+        margin-top: 30px;
+        margin-bottom: 5px;
+      }
+      .program_list h3{
+        font-weight: bold;
+        color: #50cec1;
+        font-size: 20px;
+        margin-top: 5px;
+        margin-bottom: 25px;
+      }
+
+      .program_list p{
+        margin-bottom: 7px;
+        margin-top: 7px;
+      }
+
+      .program_list h4{
+        font-size: 16px;
+        background-color: #aeede8;
+        font-weight: bold;
+        padding: 5px 15px;
+        margin-left: 30px;
+        border-radius: 10px;
+        margin-bottom: 10px;
+      }
+
+      @media only screen and (max-width: 767px){
+        .program_list h1{
+        font-size: 20px;
+        margin-top: 15px;
+        margin-bottom: 2px;
+        line-height: 1.4;
+      }
+      .program_list h3{
+        font-weight: bold;
+        color: #50cec1;
+        font-size: 16px;
+        margin-top: 2px;
+        margin-bottom: 12px;
+        line-height: 1.4;
+      }
+
+      .program_list p{
+        margin-bottom: 3px;
+        margin-top: 3px;
+        font-size: 12px;
+        line-height: 1.4;
+      }
+
+      .program_list h4{
+        font-size: 14px;
+        background-color: #aeede8;
+        font-weight: bold;
+        padding: 5px 15px;
+        margin-left: 15px;
+        border-radius: 5px;
+        margin-bottom: 5px;
+        line-height: 1.2;
+      }
+    }
+
+    </style>
+
 
     <title>Legal Design Summit</title>
 
@@ -68,17 +142,208 @@
 
     <div class="wrapper why-attend">
       <div class="container">
-	<div id="content-why-attend" class="justify-center">
+        <div style="text-align: center;">
+          <h2>PROGRAM LEGAL DESIGN SUMMIT (subject to change)</h2>
+          <p style="font-size: 20px;">The event will be hosted in the main hall of University of Helsinki.</p>
+        </div>
+	<div class="program_list">
 
-	  <h2>Program</h2>
+    <h1>DAY 1  <span class="blue">|</span> Thursday <span class="blue">|</span> 14 september 2023</h1>
+	  <h3>LEGAL DESIGN SUBSTANCE</h3>
 
-	  <p style="font-size: 20px;">We are working hard to fill the two day summit with interesting speakers and an inspiring program!<br><br>The event will be hosted in the main hall of University of Helsinki.</p>
-	  <h3 style="margin: 40px 0 0 0;">Thursday 14 September</h3>
-	  <p >Under construction...</p>
-	  <h3 style="margin: 40px 0 0 0;">Friday 15 September</h3>
-	  <p >Under construction...</p>
-	  <br/>
-	  <p style="font-size: 20px;">Check back here soon to learn more, <br/> or follow us on social media to stay updated:</p>
+    <table><colgroup><col style="width: 20%;"><col style="width: 70%"></colgroup>
+      <tbody style="padding-left: 20px;">
+        <tr>
+          <td><p>09:00-10:00</p></td>
+          <td><p>Registration and coffee</p></td>
+        </tr>
+
+        <tr>
+          <td><p>10:00-10:15</p></td>
+          <td><p>Welcome to Summit, practical info, safety, introducing host(s)</p></td>
+        </tr>
+
+        <tr>
+          <td colspan="2"><h4>I. Beautiful & Better Documents & Visualising Information</h4></td>
+        </tr>
+
+        <tr>
+          <td><p>10:15-10:35</p></td>
+          <td><p>Marco Imperiale: The Beauty in Legal Design</p></td>
+        </tr>
+
+        <tr>
+          <td><p>10:40-11:00</p></td>
+          <td><p>Stefania Passera: 10 myths about good contracts</p></td>
+        </tr>
+
+        <tr>
+          <td><p>11:05-11:25</p></td>
+          <td><p>Dan Riley: immersive visualization in litigation</p></td>
+        </tr>
+
+        <tr>
+          <td><p>10.00 - 10.15</p></td>
+          <td><p>Mel Flanagan: Visualizing complex legal processes in environmental law</p></td>
+        </tr>
+
+        <tr>
+          <td><p>12:15-13:30</p></td>
+          <td><p>Kanan Dhru: lawtoons project in India</p></td>
+        </tr>
+
+        <tr>
+          <td colspan="2"><h4>II. THE CASE FOR LEGAL DESIGN</h4></td>
+        </tr>
+
+        <tr>
+          <td><p>13:30-13:55</p></td>
+          <td><p>Simmons Wavelength: ROI and real results - making the business case for LEGAL DESIGN</p></td>
+        </tr>
+
+        <tr>
+          <td><p>14:00-14:30</p></td>
+          <td><p>FSC on innovative thinking in LEGAL DESIGN: Astrid Kohlmeier (lead), Dorra Harrar, Laura Hartmann, Karol Valencia</p></td>
+        </tr>
+
+        <tr>
+          <td><p>14:35-14:55</p></td>
+          <td><p>Marie Potel-Saville: Fairness by design: how might we end deception and manipulation online?</p></td>
+        </tr>
+
+        <tr>
+          <td><p>14:55-15:45</p></td>
+          <td><p>BREAk</p></td>
+        </tr>
+
+        <tr>
+          <td colspan="2"><h4>III. Legal Design as a new mindset in the face of modern tools</h4></td>
+        </tr>
+
+        <tr>
+          <td><p>15:45-16:05</p></td>
+          <td><p>Kursat Ozenc: Design of organizational culture</p></td>
+        </tr>
+
+        <tr>
+          <td><p>16:10-16:30</p></td>
+          <td><p>Geofrey Delcroix: the organization of a successful legal team of the future</p></td>
+        </tr>
+
+        <tr>
+          <td><p>16:35 -17:00</p></td>
+          <td><p>Margaret Hagan: Design & Human-centered Legal AI</p></td>
+        </tr>
+
+        <tr>
+          <td><p></p></td>
+          <td><p></p></td>
+        </tr>
+
+        <tr>
+          <td><p></p></td>
+          <td><p></p></td>
+        </tr>
+
+        <tr>
+          <td><p></p></td>
+          <td><p></p></td>
+        </tr>
+
+      </tbody>
+    </table>
+
+    <h1>DAY 2  <span class="blue">|</span> FRIDAY <span class="blue">|</span> 15 september 2023</h1>
+    <h3>LEGAL DESIGN for change and impact</h3>
+
+    <table><colgroup><col style="width: 20%;"><col style="width: 70%"></colgroup>
+      <tbody style="padding-left: 20px;">
+        
+        <tr>
+          <td colspan="2"><h4>I. Legal Design, Justice and Inclusivity</h4></td>
+        </tr>
+
+        <tr>
+          <td><p>10:O5-10:30</p></td>
+          <td><p>Hallie Jay Pope: LEGAL DESIGN for combatting imbalances of power</p></td>
+        </tr>
+
+        <tr>
+          <td><p>11:10-11:05</p></td>
+          <td><p>Ebru Metin: LD for United Nations - social innovation and legal design</p></td>
+        </tr>
+
+        <tr>
+          <td><p>11:10-11:40</p></td>
+          <td><p>FSC on the courtroom of tomorrow: Jose Torres (lead), Joaquin Santuber, Emily Macloud</p></td>
+        </tr>
+
+        <tr>
+          <td><p>11:30-11:50</p></td>
+          <td><p>BREAK</p></td>
+        </tr>
+
+        <tr>
+          <td><p>12:10-12:30</p></td>
+          <td><p>ZAINAB MALIK, HiiL: justice lab cases from Niger, Tunisia and Uganda</p></td>
+        </tr>
+
+        <tr>
+          <td><p>12:35-12:55</p></td>
+          <td><p>Mariana Salgado: reform of the Finnish Aliens act from a Design perspective</p></td>
+        </tr>
+
+        <tr>
+          <td><p>13:00-13:20</p></td>
+          <td><p>Angelica Flechas: Gender vision on legal design</p></td>
+        </tr>
+
+        <tr>
+          <td><p>13:20-14:30</p></td>
+          <td><p>Lunch Break</p></td>
+        </tr>
+
+        <tr>
+          <td colspan="2"><h4>II.The Future of Legal Design</h4></td>
+        </tr>
+
+        <tr>
+          <td><p>14:55-15:45</p></td>
+          <td><p>Lina Krawietz: LEGAL DESIGN  Cases of Future</p></td>
+        </tr>
+
+        <tr>
+          <td><p>15:00-15:20</p></td>
+          <td><p>Michael Doherty: The Launch of the Legal Design Journal: how can it support our community and develop our discipline?</p></td>
+        </tr>
+
+        <tr>
+          <td><p>15:25-15:55</p></td>
+          <td><p>Dan Jackson, aul-Georg Ender, Maria Lorena Florez Rojas : Legal + Design Education - Inventing the Future</p></td>
+        </tr>
+
+        <tr>
+          <td><p>16:25-16:45</p></td>
+          <td><p>Ilona Logvinova: Skills of the Future lawyer</p></td>
+        </tr>
+
+        <tr>
+          <td><p>16:50-17:15</p></td>
+          <td><p>Sankalp Bhatnagar: New Legal Imagination: How Else Our Lives Could Be Through Law</p></td>
+        </tr>
+
+        <tr>
+          <td><p>17:15</p></td>
+          <td><p>GRAND FINALE</p></td>
+        </tr>
+
+      </tbody>
+    </table>
+                
+
+
+
+
 	</div>
       </div>
     </div>
