--- a/index.html
+++ b/index.html
@@ -253,6 +253,10 @@
 				<h3 >Announcements</h3>
 				<ul style="padding-top: 50px; text-align: left;">
 					<li style="padding-bottom: 10px;">
+						<h4>18 June 2023</h4>
+						<p style="font-size: 20px;">Programs for Brainfactory and the main event are now published! <a href="program.html" style="color: #50cec1; text-decoration: underline;">See more</a></p>
+					</li>
+					<li style="padding-bottom: 10px;">
 						<h4>12 June 2023</h4>
 						<p style="font-size: 20px;">Call for participants and mentors for BRAINFACTORY is now closed, thank you all wonderful people for applying! <a href="brainfactory.html" style="color: #50cec1; text-decoration: underline;">See more</a></p>
 					</li>
