reversed program page

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 				<ul style="padding-top: 50px; text-align: left;">
 					<li style="padding-bottom: 10px;">
 						<h4>18 June 2023</h4>
-						<p style="font-size: 20px;">Programs for Brainfactory and the main event are now published! <a href="program.html" style="color: #50cec1; text-decoration: underline;">See more</a></p>
+						<p style="font-size: 20px;">Program for Brainfactory is published! <a href="brainfactory.html" style="color: #50cec1; text-decoration: underline;">See more</a></p>
 					</li>
 					<li style="padding-bottom: 10px;">
 						<h4>12 June 2023</h4>
