--- a/program.html
+++ b/program.html
@@ -143,6 +143,18 @@
     <div class="wrapper why-attend">
       <div class="container">
         <div style="text-align: center;">
+
+          <h2>Program</h2>
+
+          <p style="font-size: 20px;">We are working hard to fill the two day summit with interesting speakers and an inspiring program!</p>
+          <h3 style="margin: 40px 0 0 0;">Thursday 14 September</h3>
+          <p >Under construction...</p>
+          <h3 style="margin: 40px 0 0 0;">Friday 15 September</h3>
+          <p >Under construction...</p>
+          <br/>
+          <p style="font-size: 20px;">Check back here soon to learn more, <br/> or follow us on social media to stay updated:</p>
+
+          <!--
           <h2>PROGRAM LEGAL DESIGN SUMMIT (subject to change)</h2>
           <p style="font-size: 20px;">The event will be hosted in the main hall of University of Helsinki.</p>
         </div>
@@ -345,8 +357,12 @@
 
 
 	</div>
+
+   -->
       </div>
     </div>
+
+ 
 
     <div class="wrapper actions">
       
