interim update to program

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 					<div class="blue-bar">
 					</div>
 					<h1 style="color: white;">Legal Design Summit</h1>
-					<p class="slogan-enhanced">11–13 SEP 23 BRAINFACTORY | 14–15 SEP 23 SUMMIT | HELSINKI, FINLAND</p><br><br>
+					<p class="slogan-enhanced">11–13 SEP BRAINFACTORY | 14–15 SEP SUMMIT | HELSINKI, FINLAND</p><br><br>
 					<p class="slogan-long">Legal Design Summit is a platform for forward-thinking professionals from all over the globe.<br><br>The Largest legal design event in the world takes place in the main hall of the University of Helsinki.</p>
 				</div>
 			</div>
@@ -253,6 +253,10 @@
 				<h3 >Announcements</h3>
 				<ul style="padding-top: 50px; text-align: left;">
 					<li style="padding-bottom: 10px;">
+						<h4>3 July 2023</h4>
+						<p style="font-size: 20px;">Preliminary timetable for the main event is publish - find out the start and end times of the program to help you plan your trip to Helsinki! <a href="program.html" style="color: #50cec1; text-decoration: underline;">See more</a></p>
+					</li>
+					<li style="padding-bottom: 10px;">
 						<h4>18 June 2023</h4>
 						<p style="font-size: 20px;">Program for Brainfactory is published! <a href="brainfactory.html" style="color: #50cec1; text-decoration: underline;">See more</a></p>
 					</li>
@@ -267,10 +271,6 @@
 					<li style="padding-bottom: 10px;">
 						<h4>2 May 2023</h4>
 						<p style="font-size: 20px;">All tickets for the summit are gone, but you can still join the waitlist. <a href="speakers.html" style="color: #50cec1; text-decoration: underline;">See more</a></p>
-					</li>
-					<li style="padding-bottom: 10px;">
-						<h4>April 2023</h4>
-						<p style="font-size: 20px;">Call for speakers has been open: <a href="speakers.html" style="color: #50cec1; text-decoration: underline;">See more!</a></p>
 					</li>
 				</ul>
 			</div>
