fix for previous temporary update

--- a/program.html
+++ b/program.html
@@ -157,21 +157,30 @@
           <h2>Program</h2>
 
           <p style="font-size: 20px;">We are nearly done fixing the details of the awesome program, in the meantime here is a general timeframe:</p>
+          <h3 style="margin: 40px 0 0 0;">Wednessday 13 September</h3>
+          <ul class=prog_list style="text-align: left; width: 400px; margin: auto;  line-height: 1.8; padding-bottom: 30px; padding-top: 10px; justify-content: center;">
+            <li>Our partners are putting up side events - stay tuned for details</li>
+          </ul>
+
           <h3 style="margin: 40px 0 0 0;">Thursday 14 September</h3>
           <ul class=prog_list style="text-align: left; width: 400px; margin: auto;  line-height: 1.8; padding-bottom: 30px; padding-top: 10px; justify-content: center;">
             <li>09.00-10.00 Registeration and coffee</li>
             <li>Awesome program and a lunch break around 12</li>
-            <li>There is also side-events, miss that our partners are putting on side events - stay tuned for details</li>
-            <li>17.15 program ends</li>
+            <li>17.15 program ends, time for after party at Dottir</li>
           </ul>
+
           <h3 style="margin: 40px 0 0 0;">Friday 15 September</h3>
           <ul class=prog_list style="text-align: left; width: 400px; margin: auto;  line-height: 1.8; padding-bottom: 30px; padding-top: 10px; justify-content: center;">
             <li>09.00 Doors open</li>
             <li>10.00 Program starts</li>
             <li>More amazing program and a lunch break around 13</li>
-            <li>17.15 program ends, time for after party at Dottir</li>
+            <li>17.15 program ends, thank you all lovely people for attending!</li>
           </ul>
-          <p style="font-size: 20px;">Check back here soon to learn more, <br/> or follow us on social media to stay updated:</p>
+
+          <p style="font-size: 20px;">Staying in Helsinki for the weekend?<br> See this guide to find what to do and eat: <a href="https://www.helsinki.fi/en/networks/legal-tech-lab" target="_blank" style="color: #50cec1; text-decoration: underline;">Visit Helsinki.fi -guide</a></p>
+
+
+          <p>Check back here soon to learn more, or follow us on social media to stay updated:</p>
 
           <!-- REMOVE ME WHEN READY
           <h2>PROGRAM LEGAL DESIGN SUMMIT (subject to change)</h2>
