updated visit helsinki link to the right one

--- a/program.html
+++ b/program.html
@@ -344,7 +344,7 @@
 
 	</div>
 
-  <p style="font-size: 20px; padding-top: 20px;">Staying in Helsinki for the weekend?<br> See this guide to find what to do and eat: <a href="https://www.helsinki.fi/en/networks/legal-tech-lab" target="_blank" style="color: #50cec1; text-decoration: underline;">Visit Helsinki.fi -guide</a></p>
+  <p style="font-size: 20px; padding-top: 20px;">Staying in Helsinki for the weekend?<br> See this guide to find what to do and eat: <a href="https://www.visitfinland.com/en/places-to-go/helsinki-region/" target="_blank" style="color: #50cec1; text-decoration: underline;">Visit Helsinki.fi -guide</a></p>
 
    
       </div>
