added new name to program and two new logos per request

--- a/footer.html
+++ b/footer.html
@@ -60,6 +60,9 @@
       <li class="flex-item" style="width: 240px;"><img src="images/collabs/Laurea.png"></a></li>
       <li class="flex-item" style="width: 140px;"><img src="images/collabs/UEF.jpg"></a></li>
       <li class="flex-item" style="width: 140px;"><img src="images/collabs/Erasmus_program.PNG"></a></li>
+      <li class="flex-item" style="width: 100px;"><img src="images/collabs/Helsinki_Court_of_Appeal.png"></a></li>
+      <li class="flex-item" style="width: 250px;"><img src="images/collabs/tr_Helsingborg_logo.png"></a></li>
+
       </ul>
     </div>
     <!-- Content Main Section Ends -->
