--- a/index.html
+++ b/index.html
@@ -422,6 +422,8 @@
 	<li class="flex-item" style="width: 370px;"><a href="https://www.laurea.fi/en/" target="_blank"><img src="images/collabs/Laurea.png"></a></li>
 	<li class="flex-item" style="width: 240px;"><a href="https://www.uef.fi/en" target="_blank"><img src="images/collabs/UEF.jpg"></a></li>
 	<li class="flex-item" style="width: 260px;"><a href="https://www.uchceu.com/en/advanced-learning-facilities/legal-tech" target="_blank"><img src="images/collabs/Erasmus_program.PNG"></a></li>
+	<li class="flex-item" style="width: 200px;"><a href="https://oikeus.fi/hallintooikeudet/helsinginhallinto-oikeus/en/index.html" target="_blank"><img src="images/collabs/Helsinki_Court_of_Appeal.png"></a></li>
+	<li class="flex-item" style="width: 390px;"><a href="https://www.domstol.se/helsingborgs-tingsratt/" target="_blank"><img src="images/collabs/tr_Helsingborg_logo.png"></a></li>
   </ul>
 
 </div>
