--- a/program.html
+++ b/program.html
@@ -248,6 +248,7 @@
             <ul class=prog_list>
               <li>Geofrey Delcroix</li>
               <li>Rikka Koulu</li>
+              <li>Natalie Byrom</li>
             </ul>
           </td>
         </tr>
