--- a/program.html
+++ b/program.html
@@ -246,8 +246,8 @@
           <td></td>
           <td>
             <ul class=prog_list>
-              <li>Geofrey Delcroix</li>
-              <li>Rikka Koulu</li>
+              <li>Geoffrey Delcroix</li>
+              <li>Riikka Koulu</li>
               <li>Natalie Byrom</li>
             </ul>
           </td>
@@ -305,6 +305,7 @@
             <ul class=prog_list>
               <li>Mariana Salgado</li>
               <li>Angelica Flechas</li>
+              <li>Zainab Malik</li>
             </ul>
           </td>
         </tr>
