Major overhaul of the speaker and program page to combine these two

--- a/index.html
+++ b/index.html
@@ -100,9 +100,8 @@
 		
 		<div class="menu-container">
 		  <ul class="menu"><li class=" first"><a href="#">Home</a></li>
-		    <li class=""><a href="program.html">Program</a></li>
+		    <li class=""><a href="program-thursday.html">Program</a></li>
 			<li class=""><a href="brainfactory.html">BrainFactory</a></li>
-		    <li class=""><a href="speakers.html">Speakers</a></li>
 		    <li class=""><a href="about-us.html">About Us</a></li>
 			<li class=""><a href="tickets.html">Tickets</a></li>
 		    <li class=" last"><a href="why-attend.html">Why attend?</a></li>
@@ -257,7 +256,7 @@
 				<ul style="padding-top: 50px; text-align: left;">
 					<li style="padding-bottom: 10px;">
 						<h4>3 July 2023</h4>
-						<p style="font-size: 20px;">Preliminary timetable for the main event is publish - find out the start and end times of the program to help you plan your trip to Helsinki! <a href="program.html" style="color: #50cec1; text-decoration: underline;">See more</a></p>
+						<p style="font-size: 20px;">Preliminary timetable for the main event is publish - find out the start and end times of the program to help you plan your trip to Helsinki! <a href="program-thursday.html" style="color: #50cec1; text-decoration: underline;">See more</a></p>
 					</li>
 					<li style="padding-bottom: 10px;">
 						<h4>18 June 2023</h4>
