--- a/tickets.html
+++ b/tickets.html
@@ -76,9 +76,8 @@
 		<div class="menu-toggler">Menu<span class="icon"></span></div>
 		<div class="menu-container">
 		  <ul class="menu"><li class=" first"><a href="index.html">Home</a></li>
-		    <li class=""><a href="program.html">Program</a></li>
+		    <li class=""><a href="program-thursday.html">Program</a></li>
         <li class=""><a href="brainfactory.html">BrainFactory</a></li>
-		    <li class=""><a href="speakers.html">Speakers</a></li>
 		    <li class=""><a href="about-us.html">About Us</a></li>
             <li class=""><a href="tickets.html">Tickets</a></li>
 		    <li class=" last"><a href="why-attend.html">Why attend?</a></li>
